# SINEKTA_Test

./: .gitignore  CMakeLists.txt  README.MD  S21.s1p  Unibtu_24.04LTS_Qt5.15.13_prerequisites.txt  install.qt_5.15.3.sh  my.other.code.txt  remove.qt_5.15.3.sh
TestApp/: TestApp.cpp  TestApp.qml  make-deploy-package.sh  touchstonedata.cpp  touchstonedata.h
docs/: Linear interpolation.docx  S11.s1p  qt.install.sequence.txt
qt/TestApp/: TestApp.cpp  TestApp.pro  TestApp.qml  TestApp.qrc  touchstonedata.cpp  touchstonedata.h
qt/TestConsoleQMake/: TestConsoleQMake.pro  main.cpp  signalsink.cpp  signalsink.h  signalsource.cpp  signalsource.h  touchstonedatareader.cpp  touchstonedatareader.h
src/: CMakeLists.txt
src/colored_console_output/: CMakeLists.txt  colored_console_output.cpp  colored_echo.sh
src/data_parser_lib/: CMakeLists.txt  data_parser_lib.cpp  data_parser_lib.hpp
src/data_parser_test/: CMakeLists.txt  data_parser_test.cpp
